--- a/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/home.html
+++ b/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/home.html
@@ -28,14 +28,14 @@
         </nav>
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-files" role="tabpanel" aria-labelledby="nav-files-tab">
-                <form action="#" enctype="multipart/form-data" method="POST">
+                <form th:object = "${upload}" th:action = "@{/home/upload}" action="#" enctype="multipart/form-data" method="POST">
                     <div class="container">
                         <div class="row" style="margin: 1em;">
                             <div class="col-sm-2">
-                                <label for="fileUpload">Upload a New File:</label>
+                                <label for="file">Upload a New File:</label>
                             </div>
                             <div class="col-sm-6">
-                                <input type="file" class="form-control-file" id="fileUpload" name="fileUpload">
+                                <input type="file" class="form-control-file" id="file" name="file">
                             </div>
                             <div class="col-sm-4">
                                 <button type="submit" class="btn btn-dark">Upload</button>
@@ -52,12 +52,13 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <td>
+
+                        <tr th:each="file : ${files}" >
+                            <td >
                                 <a target="_blank" class="btn btn-success">View</a>
-                                <a class="btn btn-danger">Delete</a>
+                                <a class="btn btn-danger" >Delete</a>
                             </td>
-                            <th scope="row">ExampleFile.txt</th>
+                            <th scope="row"> <span th:text="${file.fileName}"> ExampleFile.txt</span></th>
                         </tr>
                         </tbody>
                     </table>
@@ -217,9 +218,6 @@
                 $('#noteModal').modal('show');
             }
 
-            // For opening the existing note modal
-            function updateNoteModal(noteId, noteTitle, noteDescription) {
-                 }
 
             // For opening the credentials modal
             function showCredentialModal(credentialId, url, username, password,key) {
