--- a/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/home.html
+++ b/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/home.html
@@ -22,17 +22,20 @@
     <div id="contentDiv" style="clear: right;">
         <nav style="clear: right;">
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                <a class="nav-item nav-link active" id="nav-files-tab" data-toggle="tab" href="#nav-files" role="tab"
+                <a class="nav-item nav-link "
+                   id="nav-files-tab" data-toggle="tab" href="#nav-files" role="tab"
                    aria-controls="nav-files" aria-selected="true">Files</a>
-                <a class="nav-item nav-link" id="nav-notes-tab" data-toggle="tab" href="#nav-notes" role="tab"
+                <a class="nav-item nav-link" th:classappend="${#strings.equals(activeTab, 'notes') ? 'active' : ''}"
+                   id="nav-notes-tab" data-toggle="tab" href="#nav-notes" role="tab"
                    aria-controls="nav-notes" aria-selected="false">Notes</a>
-                <a class="nav-item nav-link" id="nav-credentials-tab" data-toggle="tab" href="#nav-credentials"
+                <a class="nav-item nav-link" th:classappend="${#strings.equals(activeTab, 'credentials') ? 'active' : ''}"
+                   id="nav-credentials-tab" data-toggle="tab" href="#nav-credentials"
                    role="tab" aria-controls="nav-credentials" aria-selected="false">Credentials</a>
             </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade show active" id="nav-files" role="tabpanel" aria-labelledby="nav-files-tab">
-                <form th:object="${upload}" th:action="@{/file}" action="#" enctype="multipart/form-data" method="POST">
+            <div class="tab-pane fade" th:classappend="${#strings.equals(activeTab, 'files') ? 'show active' : ''}" id="nav-files" role="tabpanel" aria-labelledby="nav-files-tab">
+                <form th:object="${home}" th:action="@{/files}" action="#" enctype="multipart/form-data" method="POST">
                     <div class="container">
                         <div class="row" style="margin: 1em;">
                             <div class="col-sm-2">
@@ -59,16 +62,17 @@
 
                         <tr th:each="file : ${files}">
                             <td>
-                                <a target="_blank" class="btn btn-success" th:href="@{file/{fileName}(fileName=${file.fileId})}">View</a>
-                                <a th:href="@{/file/delete/{fileId}(fileId=${file.fileId})}" class="btn btn-danger">Delete</a>
+                                <a target="{file.fileName}" class="btn btn-success" th:href="@{files/view/{fileId}(fileId=${file.fileId})}">View</a>
+                                <a th:href="@{/files/delete/{fileId}(fileId=${file.fileId})}"
+                                   onclick="return confirm('Are you sure you want to delete this file?');" class="btn btn-danger">Delete</a>
                             </td>
-                            <th scope="row"><span th:text="${file.fileName}"> ExampleFile.txt</span></th>
+                            <th scope="row"><span th:text="${file.getFileName()}"> ExampleFile.txt</span></th>
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
-            <div class="tab-pane fade" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
+            <div class="tab-pane fade" th:classappend="${#strings.equals(activeTab, 'notes') ? 'show active' : ''}" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
                 <button style="margin: 0.25em;" type="button" class="btn btn-info float-right"
                         onclick="showNoteModal()">
                     + Add a New Note
@@ -107,7 +111,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <form th:object="${note}" th:action="@{/note}" method="POST" modelAttribute="home">
+                                <form th:object="${home}" th:action="@{/note}" method="POST" modelAttribute="home">
                                     <input type="hidden" name="noteId" id="note-id" >
                                     <div class="form-group">
                                         <label for="note-title" class="col-form-label">Title</label>
@@ -133,7 +137,7 @@
                 </div>
 
             </div>
-            <div class="tab-pane fade" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
+            <div class="tab-pane fade" th:classappend="${#strings.equals(activeTab, 'credentials') ? 'show active' : ''}" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
                 <button style="margin: 0.25em;" type="button" class="btn btn-info float-right"
                         onclick="showCredentialModal()">
                     + Add a New Credential
@@ -175,7 +179,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <form th:object="${credential}" th:action="@{/credential}" action="#" method="POST"
+                                <form th:object="${home}" th:action="@{/credential}" action="#" method="POST"
                                       modelAttribute="home">
                                     <input type="hidden" Example Credential Username name="credentialId"
                                            id="credential-id">
@@ -259,6 +263,7 @@
 
                 $('#credentialModal').modal('show');
             }
+
 
 </script>
 </body>
