--- a/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/home.html
+++ b/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/home.html
@@ -90,7 +90,7 @@
                         <tbody>
                         <tr th:id="${note.noteId}" th:each="note:${notes}" >
                             <td>
-                                <button type="button" class="btn btn-success" onclick="updateNoteModal(id)"  th:id="${note.noteId}">Edit</button>
+                                <button type="button" class="btn btn-success" th:onclick="javascript: showNoteModal([[${note.noteId}]],[[${note.noteTitle}]], [[${note.noteDescription}]])" >Edit</button>
                                 <a th:href="@{/note/delete/{noteId}(noteId=${note.noteId})}"  onclick="return confirm('Are you sure you want to delete this note?');" class="btn btn-danger">Delete</a>
                             </td>
                             <th  scope="row" th:text="${note.noteTitle}"><span > Example Note Title</span></th>
@@ -156,7 +156,7 @@
                         <tbody>
                         <tr th:each="credential : ${credentials}">
                             <td>
-                                <button type="button" class="btn btn-success" onclick="updateCredentialModal(id)"  th:id= "${credential.credentialId}">Edit</button>
+                                <button type="button" class="btn btn-success" th:onclick="javascript: showCredentialModal([[${credential.credentialId}]],[[${credential.url}]], [[${credential.userName}]], [[${credential.password}]])">Edit</button>
                                 <a th:href="@{/credential/delete/{credentialId}(credentialId=${credential.credentialId})}"
                                    onclick="return confirm('Are you sure you want to delete this credential?');" class="btn btn-danger">Delete</a>
                             </td>
@@ -230,21 +230,8 @@
                 $('#noteModal').modal('show');
             }
 
-            // For opening the note update modal
-            function updateNoteModal(id) {
-                var rows = document.getElementById("noteTable").rows[id];
-
-                $('#note-id').val(id);
-                $('#note-title').val(rows.cells[1].innerHTML);
-                $('#note-description').val(rows.cells[2].innerHTML);
-
-                $('#noteModal').modal('show');
-            }
-
-
-
             // For opening the credentials modal
-            function showCredentialModal(credentialId, url, username, password,key) {
+            function showCredentialModal(credentialId, url, username, password) {
                 $('#credential-id').val(credentialId ? credentialId : '');
                 $('#credential-url').val(url ? url : '');
                 $('#credential-username').val(username ? username : '');
