--- a/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/home.html
+++ b/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/home.html
@@ -73,13 +73,13 @@
                 </div>
             </div>
             <div class="tab-pane fade" th:classappend="${#strings.equals(activeTab, 'notes') ? 'show active' : ''}" id="nav-notes" role="tabpanel" aria-labelledby="nav-notes-tab">
-                <button style="margin: 0.25em;" type="button" class="btn btn-info float-right"
+                <button id="add-note" style="margin: 0.25em;" type="button" class="btn btn-info float-right"
                         onclick="showNoteModal()">
                     + Add a New Note
                 </button>
 
                 <div class="table-responsive">
-                    <table class="table table-striped" id="noteTable">
+                    <table class="table table-striped" id="note-table">
                         <thead>
                         <tr>
                             <th style="width: 20%" scope="col"></th>
@@ -90,11 +90,11 @@
                         <tbody>
                         <tr th:id="${note.noteId}" th:each="note:${notes}" >
                             <td>
-                                <button type="button" class="btn btn-success" th:onclick="javascript: showNoteModal([[${note.noteId}]],[[${note.noteTitle}]], [[${note.noteDescription}]])" >Edit</button>
-                                <a th:href="@{/note/delete/{noteId}(noteId=${note.noteId})}"  onclick="return confirm('Are you sure you want to delete this note?');" class="btn btn-danger">Delete</a>
+                                <button id="note-edit" type="button" class="btn btn-success" th:onclick="javascript: showNoteModal([[${note.noteId}]],[[${note.noteTitle}]], [[${note.noteDescription}]])"  >Edit</button>
+                                <a id="note-delete" th:href="@{/note/delete/{noteId}(noteId=${note.noteId})}"   class="btn btn-danger">Delete</a>
                             </td>
                             <th  scope="row" th:text="${note.noteTitle}"><span > Example Note Title</span></th>
-                            <td th:text="${note.noteDescription}"><span > Example Note Description</span></td>
+                            <td id="noteDesc" th:text="${note.noteDescription}"><span > Example Note Description</span></td>
                         </tr>
                         </tbody>
                     </table>
@@ -123,12 +123,12 @@
                                         <textarea class="form-control" name="noteDescription" id="note-description"
                                                   rows="5" maxlength="1000" required></textarea>
                                     </div>
-                                    <button id="noteSubmit" type="submit" class="d-none"></button>
+                                    <button id="note-submit" type="submit" class="d-none"></button>
                                 </form>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary" onclick="$('#noteSubmit').click(); ">Save
+                                <button id="note-save" type="button" class="btn btn-primary" onclick="$('#note-submit').click(); ">Save
                                     changes
                                 </button>
                             </div>
