--- a/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/home.html
+++ b/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/home.html
@@ -138,7 +138,7 @@
 
             </div>
             <div class="tab-pane fade" th:classappend="${#strings.equals(activeTab, 'credentials') ? 'show active' : ''}" id="nav-credentials" role="tabpanel" aria-labelledby="nav-credentials-tab">
-                <button style="margin: 0.25em;" type="button" class="btn btn-info float-right"
+                <button id="add-credential" style="margin: 0.25em;" type="button" class="btn btn-info float-right"
                         onclick="showCredentialModal()">
                     + Add a New Credential
                 </button>
@@ -156,9 +156,8 @@
                         <tbody>
                         <tr th:each="credential : ${credentials}">
                             <td>
-                                <button type="button" class="btn btn-success" th:onclick="javascript: showCredentialModal([[${credential.credentialId}]],[[${credential.url}]], [[${credential.userName}]], [[${credential.password}]])">Edit</button>
-                                <a th:href="@{/credential/delete/{credentialId}(credentialId=${credential.credentialId})}"
-                                   onclick="return confirm('Are you sure you want to delete this credential?');" class="btn btn-danger">Delete</a>
+                                <button id="credential-edit"  type="button" class="btn btn-success" th:onclick="javascript: showCredentialModal([[${credential.credentialId}]],[[${credential.url}]], [[${credential.userName}]], [[${credential.password}]])">Edit</button>
+                                <a id="credential-delete" th:href="@{/credential/delete/{credentialId}(credentialId=${credential.credentialId})}" class="btn btn-danger">Delete</a>
                             </td>
                             <th th:text="${credential.url}" scope="row" ><span > Example Credential URL</span></th>
                             <td th:text="${credential.userName}"><span > Username</span></td>
@@ -199,12 +198,12 @@
                                                maxlength="30" required>
                                     </div>
 
-                                    <button id="credentialSubmit" type="submit" class="d-none"></button>
+                                    <button id="credential-submit" type="submit" class="d-none"></button>
                                 </form>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary" onclick="$('#credentialSubmit').click();">
+                                <button id="credential-save" type="button" class="btn btn-primary" onclick="$('#credential-submit').click();">
                                     Save changes
                                 </button>
                             </div>
