--- a/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/home.html
+++ b/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/home.html
@@ -35,7 +35,7 @@
         </nav>
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade" th:classappend="${#strings.equals(activeTab, 'files') ? 'show active' : ''}" id="nav-files" role="tabpanel" aria-labelledby="nav-files-tab">
-                <form th:object="${files}" th:action="@{/files}" action="#" enctype="multipart/form-data" method="POST">
+                <form th:object="${files}" th:action="@{/home/files}" action="#" enctype="multipart/form-data" method="POST">
                     <div class="container">
                         <div class="row" style="margin: 1em;">
                             <div class="col-sm-2">
@@ -43,6 +43,9 @@
                             </div>
                             <div class="col-sm-6">
                                 <input type="file" class="form-control-file" id="file" name="file">
+                            </div>
+                            <div id ="error-msg" th:if = "${fileSizeError}" class="alert alert-danger">
+                                <span th:text = "${fileSizeError}"></span>
                             </div>
                             <div class="col-sm-4">
                                 <button type="submit" class="btn btn-dark">Upload</button>
@@ -62,9 +65,8 @@
 
                         <tr th:each="file : ${files}">
                             <td>
-                                <a target="{file.fileName}" class="btn btn-success" th:href="@{files/view/{fileId}(fileId=${file.fileId})}">View</a>
-                                <a th:href="@{/files/delete/{fileId}(fileId=${file.fileId})}"
-                                   onclick="return confirm('Are you sure you want to delete this file?');" class="btn btn-danger">Delete</a>
+                                <a target="{file.fileName}" class="btn btn-success" th:href="@{/home/files/view/{fileId}(fileId=${file.fileId})}">View</a>
+                                <a th:href="@{/home/files/delete/{fileId}(fileId=${file.fileId})}" class="btn btn-danger">Delete</a>
                             </td>
                             <th scope="row"><span th:text="${file.getFileName()}"> ExampleFile.txt</span></th>
                         </tr>
@@ -91,7 +93,7 @@
                         <tr th:id="${note.noteId}" th:each="note:${notes}" >
                             <td>
                                 <button id="note-edit" type="button" class="btn btn-success" th:onclick="javascript: showNoteModal([[${note.noteId}]],[[${note.noteTitle}]], [[${note.noteDescription}]])"  >Edit</button>
-                                <a id="note-delete" th:href="@{/note/delete/{noteId}(noteId=${note.noteId})}"   class="btn btn-danger">Delete</a>
+                                <a id="note-delete" th:href="@{/home/note/delete/{noteId}(noteId=${note.noteId})}"   class="btn btn-danger">Delete</a>
                             </td>
                             <th  scope="row" th:text="${note.noteTitle}"><span > Example Note Title</span></th>
                             <td id="noteDesc" th:text="${note.noteDescription}"><span > Example Note Description</span></td>
@@ -111,7 +113,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <form th:object="${notes}" th:action="@{/note}" method="POST" modelAttribute="home">
+                                <form th:object="${notes}" th:action="@{/home/note}" method="POST" modelAttribute="home">
                                     <input type="hidden" name="noteId" id="note-id" >
                                     <div class="form-group">
                                         <label for="note-title" class="col-form-label">Title</label>
@@ -163,7 +165,7 @@
                                         th:decryption="${encryptionService.decryptValue(credential.getPassword(),credential.getKey())}"
                                         th:onclick="javascript:showCredentialModal(this.getAttribute('credentialId'),this.getAttribute('url'),this.getAttribute('username'),this.getAttribute('decryption'));">
                                     Edit</button>
-                                <a id="credential-delete" th:href="@{/credential/delete/{credentialId}(credentialId=${credential.credentialId})}" class="btn btn-danger">Delete</a>
+                                <a id="credential-delete" th:href="@{/home/credential/delete/{credentialId}(credentialId=${credential.credentialId})}" class="btn btn-danger">Delete</a>
                             </td>
                             <th th:text="${credential.url}" scope="row" ><span > Example Credential URL</span></th>
                             <td th:text="${credential.username}"><span > Username</span></td>
@@ -184,7 +186,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <form th:object="${credentials}" th:action="@{/credential}" action="#" method="POST"
+                                <form th:object="${credentials}" th:action="@{/home/credential}" action="#" method="POST"
                                       modelAttribute="home">
                                     <input type="hidden" Example Credential Username name="credentialId"
                                            id="credential-id">
