--- a/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/login.html
+++ b/projects/01 SuperDuperDrive/cloudstorage/src/main/resources/templates/login.html
@@ -10,6 +10,9 @@
 </head>
 <body class="p-3 mb-2 bg-light text-black">
 <div class="container justify-content-center w-25 p-3" style="background-color: #eeeeee; margin-top: 5em;">
+    <div th:if="${message}" class="alert alert-dark">
+        <h7 th:text="${message}"/>
+    </div>
     <h1 class="display-5">Login</h1>
     <form action="#" th:action="@{/login}" method="POST">
         <div id="error-msg" th:if="${param.error}" class="alert alert-danger">
